# todo-list

./: .gitignore  CONTRIBUTING.md  README.md  build-flatpak.sh  com.pabmartine.TodoList.flatpak  com.pabmartine.TodoList.yaml  compile_translations.sh  extract_strings.sh  pyproject.toml  todo-list.py
data/: com.pabmartine.TodoList.desktop  com.pabmartine.TodoList.metainfo.xml
docs/: architecture.md  development.md  i18n.md  index.md  packaging.md  roadmap.md  user-guide.md
locale/en/LC_MESSAGES/: todo-list.po
locale/es/LC_MESSAGES/: todo-list.po
packaging/flatpak/: build-flatpak.sh  com.pabmartine.TodoList.yaml
scripts/: compile_translations.sh  extract_strings.sh
src/todo_list/: __init__.py  app.py  config.py  constants.py  i18n.py  main.py
src/todo_list/core/: config.py  constants.py  debug.py  i18n.py
src/todo_list/models/: project.py  task.py
src/todo_list/repositories/: migrations.py  task_repository.py
src/todo_list/services/: project_service.py  task_service.py
src/todo_list/ui/: projects.py  sidebar.py  styles.py  task_detail.py  task_list.py  window.py
src/todo_list/ui/support/: __init__.py  appearance.py  data_actions.py  lifecycle.py
tests/: test_migrations.py  test_task_repository.py  test_task_service.py
