[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-list"
version = "1.1.0"
description = "GTK4/libadwaita task manager for GNOME"
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.10"

[project.scripts]
todo-list = "todo_list.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
